--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,7 +1,8 @@
 <!--accounts/signup.html-->
 
 {% extends 'base.html' %}
-
+{% block sidebar%}
+{% endblock sidebar%}
 {% block content %}
 
     <h1>회원 가입</h1>
