--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -1,6 +1,9 @@
 <!--posts/index.html-->
 
-{% extends 'base_nav.html' %}
+{% extends 'base.html' %}
+
+{% block sidebar%}
+{% endblock sidebar%}
 
 {% block content %}
 
