--- a/posts/templates/posts/edit.html
+++ b/posts/templates/posts/edit.html
@@ -1,4 +1,7 @@
-{% extends 'base_nav.html' %}
+{% extends 'base.html' %}
+
+{% block sidebar%}
+{% endblock sidebar%}
 
 {% block content %}
   <h1>EDIT</h1>
